--- a/.gitignore
+++ b/.gitignore
@@ -6089,3 +6089,5 @@ proj.android/libs/
 proj.android/gen/
 cocos2d/cocos/platform/android/
 proj.android/
+proj.win32/.vs/HelloCpp/v14/.suo
+proj.win32/HelloCpp.sdf
