Android 설정 파일 Track 추가

--- a/.gitignore
+++ b/.gitignore
@@ -6086,7 +6086,191 @@ proj.android/obj/
 proj.android/libs/
 proj.android/gen/
 cocos2d/cocos/platform/android/
-proj.android/
 proj.win32/.vs/HelloCpp/v14/.suo
 proj.win32/HelloCpp.sdf
 proj.win32/
+proj.android/assets/Sounds/Splash_0.mp3
+proj.android/assets/Sounds/Splash_0.ogg
+proj.android/assets/Sprites/Andi-Koroveshi8.jpg
+proj.android/assets/Sprites/Button_bag.json
+proj.android/assets/Sprites/Button_bag.png
+proj.android/assets/Sprites/Button_bagclose.png
+proj.android/assets/Sprites/Button_bagopen.png
+proj.android/assets/Sprites/Button_craft.json
+proj.android/assets/Sprites/Button_craft.png
+proj.android/assets/Sprites/Button_start.json
+proj.android/assets/Sprites/Button_start.png
+proj.android/assets/Sprites/Button_start_down.png
+proj.android/assets/Sprites/Button_start_up.png
+proj.android/assets/Sprites/Cauldron.gif
+proj.android/assets/Sprites/Fisherman.png
+proj.android/assets/Sprites/Fishes/Costume.png
+proj.android/assets/Sprites/Fishes/Etc001.png
+proj.android/assets/Sprites/Fishes/Etc002.gif
+proj.android/assets/Sprites/Fishes/Etc003.gif
+proj.android/assets/Sprites/Fishes/Etc004.gif
+proj.android/assets/Sprites/Fishes/Fish001.png
+proj.android/assets/Sprites/Fishes/Fish002.png
+proj.android/assets/Sprites/Fishes/Fish003.png
+proj.android/assets/Sprites/Fishes/Fish004.png
+proj.android/assets/Sprites/Fishes/Fish005.png
+proj.android/assets/Sprites/Fishes/Fish006.png
+proj.android/assets/Sprites/Fishes/Fish007.png
+proj.android/assets/Sprites/Fishes/Fish008.png
+proj.android/assets/Sprites/Fishes/Fish009.png
+proj.android/assets/Sprites/Fishes/Fish010.png
+proj.android/assets/Sprites/Fishes/Fish011.png
+proj.android/assets/Sprites/Fishes/Fish012.png
+proj.android/assets/Sprites/Fishes/Fish013.png
+proj.android/assets/Sprites/Fishes/Fish014.png
+proj.android/assets/Sprites/Fishes/Fish015.png
+proj.android/assets/Sprites/Fishes/Fish016.png
+proj.android/assets/Sprites/Fishes/Fish017.png
+proj.android/assets/Sprites/Fishes/Fish018.png
+proj.android/assets/Sprites/Fishes/Fish019.png
+proj.android/assets/Sprites/Fishes/Fish020.png
+proj.android/assets/Sprites/Fishes/Fish021.png
+proj.android/assets/Sprites/Fishes/Fish022.png
+proj.android/assets/Sprites/Fishes/Fish023.png
+proj.android/assets/Sprites/Fishes/Fish024.png
+proj.android/assets/Sprites/Fishes/Fish025.png
+proj.android/assets/Sprites/Fishes/Fish026.png
+proj.android/assets/Sprites/Fishes/Fish027.png
+proj.android/assets/Sprites/Fishes/Fish028.png
+proj.android/assets/Sprites/Fishes/Fish029.png
+proj.android/assets/Sprites/Fishes/Fish030.png
+proj.android/assets/Sprites/Fishes/Fish031.png
+proj.android/assets/Sprites/Fishes/Fish032.png
+proj.android/assets/Sprites/Fishes/Fish033.png
+proj.android/assets/Sprites/Fishes/Fish034.png
+proj.android/assets/Sprites/Fishes/Fish035.png
+proj.android/assets/Sprites/Fishes/Fish036.png
+proj.android/assets/Sprites/Fishes/Fish037.png
+proj.android/assets/Sprites/Fishes/Fish038.png
+proj.android/assets/Sprites/Fishes/Fish039.png
+proj.android/assets/Sprites/Fishes/Fish040.png
+proj.android/assets/Sprites/Fishes/Fish041.png
+proj.android/assets/Sprites/Fishes/Fish042.png
+proj.android/assets/Sprites/Fishes/Fish043.png
+proj.android/assets/Sprites/Fishes/Fish044.png
+proj.android/assets/Sprites/Fishes/Fish045.png
+proj.android/assets/Sprites/Fishes/Fish046.png
+proj.android/assets/Sprites/Fishes/Fish047.png
+proj.android/assets/Sprites/Fishes/Fish048.png
+proj.android/assets/Sprites/Fishes/Fish049.png
+proj.android/assets/Sprites/Fishes/Fish050.png
+proj.android/assets/Sprites/Fishes/Fish051.png
+proj.android/assets/Sprites/Fishes/Fish052.png
+proj.android/assets/Sprites/Fishes/Fish053.png
+proj.android/assets/Sprites/Fishes/Fish054.png
+proj.android/assets/Sprites/Fishes/Fish055.png
+proj.android/assets/Sprites/Fishes/Fish056.png
+proj.android/assets/Sprites/Fishes/Fish057.png
+proj.android/assets/Sprites/Fishes/Fish058.png
+proj.android/assets/Sprites/Fishes/Fish059.png
+proj.android/assets/Sprites/Fishes/Fish060.png
+proj.android/assets/Sprites/Fishes/Fish061.png
+proj.android/assets/Sprites/Fishes/Fish062.png
+proj.android/assets/Sprites/Fishes/Fish063.png
+proj.android/assets/Sprites/Fishes/Fish064.png
+proj.android/assets/Sprites/Fishes/Fish065.png
+proj.android/assets/Sprites/Fishes/Fish066.png
+proj.android/assets/Sprites/Fishes/Fish067.png
+proj.android/assets/Sprites/Fishes/Fish068.png
+proj.android/assets/Sprites/Fishes/Fish069.png
+proj.android/assets/Sprites/Fishes/Fish070.png
+proj.android/assets/Sprites/Fishes/Fish071.png
+proj.android/assets/Sprites/Fishes/Fish072.png
+proj.android/assets/Sprites/Fishes/Fish073.png
+proj.android/assets/Sprites/Fishes/Fish074.png
+proj.android/assets/Sprites/Fishes/Fish075.png
+proj.android/assets/Sprites/Fishes/Fish076.png
+proj.android/assets/Sprites/Fishes/Fish077.png
+proj.android/assets/Sprites/Fishes/Fish078.png
+proj.android/assets/Sprites/Fishes/Fish079.png
+proj.android/assets/Sprites/Fishes/Fish080.png
+proj.android/assets/Sprites/Fishes/Fish081.png
+proj.android/assets/Sprites/Fishes/Fish082.png
+proj.android/assets/Sprites/Fishes/Fish083.png
+proj.android/assets/Sprites/Fishes/Fish084.png
+proj.android/assets/Sprites/Fishes/Fish085.png
+proj.android/assets/Sprites/Fishes/Fish086.png
+proj.android/assets/Sprites/Fishes/Fish087.png
+proj.android/assets/Sprites/Fishes/Fish088.png
+proj.android/assets/Sprites/Fishes/Fish089.png
+proj.android/assets/Sprites/Fishes/Fish090.png
+proj.android/assets/Sprites/Fishes/Fish091.png
+proj.android/assets/Sprites/Fishes/Fish092.png
+proj.android/assets/Sprites/Fishes/Fish093.png
+proj.android/assets/Sprites/Fishes/Fish094.png
+proj.android/assets/Sprites/Fishes/Fish095.png
+proj.android/assets/Sprites/Fishes/Fish096.png
+proj.android/assets/Sprites/Fishes/Fish097.png
+proj.android/assets/Sprites/Fishes/Fish098.png
+proj.android/assets/Sprites/Fishes/Fish099.png
+proj.android/assets/Sprites/Fishes/Fish100.png
+proj.android/assets/Sprites/Fishes/Fish101.png
+proj.android/assets/Sprites/Fishes/Fish102.png
+proj.android/assets/Sprites/Fishes/Fish103.png
+proj.android/assets/Sprites/Fishes/Fish104.png
+proj.android/assets/Sprites/Fishes/Fish105.png
+proj.android/assets/Sprites/Fishes/Fish106.png
+proj.android/assets/Sprites/Fishes/Fish107.png
+proj.android/assets/Sprites/Fishes/Fish108.png
+proj.android/assets/Sprites/Fishes/Fish109.png
+proj.android/assets/Sprites/Fishes/Fish110.png
+proj.android/assets/Sprites/Fishes/Fish111.png
+proj.android/assets/Sprites/Fishes/Fish112.png
+proj.android/assets/Sprites/Fishes/Fish113.png
+proj.android/assets/Sprites/Fishes/Fish114.png
+proj.android/assets/Sprites/Fishes/Fish115.png
+proj.android/assets/Sprites/Fishes/Fish116.png
+proj.android/assets/Sprites/Fishes/Fish117.png
+proj.android/assets/Sprites/Flow.png
+proj.android/assets/Sprites/Game.json
+proj.android/assets/Sprites/Game.png
+proj.android/assets/Sprites/Logo.json
+proj.android/assets/Sprites/Logo.png
+proj.android/assets/Sprites/MOORS.png
+proj.android/assets/Sprites/Main.json
+proj.android/assets/Sprites/Main.png
+proj.android/assets/Sprites/RainDrop.json
+proj.android/assets/Sprites/RainDrop.png
+proj.android/assets/Sprites/Ship.json
+proj.android/assets/Sprites/Ship.png
+proj.android/assets/Sprites/Ship_normal.json
+proj.android/assets/Sprites/Ship_normal.png
+proj.android/assets/Sprites/Ship_windy.json
+proj.android/assets/Sprites/Ship_windy.png
+proj.android/assets/Sprites/SnowDrop.json
+proj.android/assets/Sprites/SnowDrop.png
+proj.android/assets/Sprites/WaterSplash.png
+proj.android/assets/Sprites/backpack_big.png
+proj.android/assets/Sprites/backpack_small.png
+proj.android/assets/Sprites/inventory.png
+proj.android/assets/Sprites/inventory_bg.png
+proj.android/assets/Sprites/inventory_bg2.png
+proj.android/assets/Sprites/inventory_bg3.png
+proj.android/assets/Sprites/needle.png
+proj.android/assets/Sprites/rope_texture.png
+proj.android/assets/ase/Button_craft.ase
+proj.android/assets/ase/Button_inventory.ase
+proj.android/assets/ase/Button_inventory_open.ase
+proj.android/assets/ase/Fisherman.ase
+proj.android/assets/ase/Flow.ase
+proj.android/assets/ase/Game.ase
+proj.android/assets/ase/Logo.ase
+proj.android/assets/ase/Main.ase
+proj.android/assets/ase/Main_night.ase
+proj.android/assets/ase/RainDrop.ase
+proj.android/assets/ase/Rope.ase
+proj.android/assets/ase/Ship.ase
+proj.android/assets/ase/SnowDrop.ase
+proj.android/assets/ase/WaterSplash.ase
+proj.android/assets/ase/inventory.ase
+proj.android/assets/ase/inventory_bg.ase
+proj.android/assets/ase/needle.ase
+proj.android/assets/fonts/Marker Felt.ttf
+proj.android/assets/fonts/arial.ttf
+proj.android/assets/fonts/nanumgoco-Bold.ttf
+proj.android/assets/fonts/nanumgoco.ttf
