안드로이드 실행시 오류 디버깅

--- a/.gitignore
+++ b/.gitignore
@@ -6274,3 +6274,4 @@ proj.android/assets/fonts/Marker Felt.ttf
 proj.android/assets/fonts/arial.ttf
 proj.android/assets/fonts/nanumgoco-Bold.ttf
 proj.android/assets/fonts/nanumgoco.ttf
+proj.android/
